--- a/DbTask.DataAccess/DbTask.DataAccess.csproj
+++ b/DbTask.DataAccess/DbTask.DataAccess.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Commands\Tests\UpdateTestsAuthorByBrowser.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Dapper" Version="2.1.35" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.2.2" />
   </ItemGroup>
