--- a/DbTask/DbTask.Tests.csproj
+++ b/DbTask/DbTask.Tests.csproj
@@ -31,10 +31,9 @@
     <None Update="Resources\config.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Utils\" />
+    <None Update="Resources\test_data.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
